// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`validateDraft > request shape for claude-sonnet-5 is unchanged (model-request shaping guard) 1`] = `
{
  "max_tokens": 2048,
  "model": "claude-sonnet-5",
  "output_config": null,
  "system": [
    {
      "cache_control": {
        "type": "ephemeral",
      },
      "type": "text",
    },
  ],
  "temperature": null,
  "thinking": {
    "type": "disabled",
  },
  "tool_choice": {
    "name": "submit_validation_result",
    "type": "tool",
  },
  "tools": [
    {
      "input_schema": {
        "properties": {
          "ambiguous": {
            "description": "True if more than one substantively different answer would be equally correct. For cloze: true when more than one plausibly-fitting lexeme/form satisfies the targeted grammar point in this sentence AND the draft's \`acceptableAnswers\` list does not enumerate them (e.g. 'Sınıfta sekiz ___ var' — chair/student/book all fit — with no \`acceptableAnswers\`). For translation: surface variation is fine, but two structurally different correct translations is ambiguous. For vocab_recall: the prompt must single out exactly one headword.",
            "type": "boolean",
          },
          "candidateFillers": {
            "description": "Fill this FIRST, before any other field. List 2-4 distinct fillers a competent speaker might write in the blank — including \`correctAnswer\` itself — and adjudicate each against the VISIBLE sentence alone, never against \`correctAnswer\`. This is your working-out for \`ambiguous\`, not a verdict.",
            "items": {
              "properties": {
                "filler": {
                  "description": "The candidate fill.",
                  "type": "string",
                },
                "reason": {
                  "description": "For \`ruled-out\`, quote the span of the visible sentence that forbids it. For \`also-correct\`, one clause on why it fits.",
                  "type": "string",
                },
                "verdict": {
                  "description": "\`also-correct\`: fully correct on the visible sentence AND satisfies the grammar point. \`ruled-out\`: something in the visible sentence forbids it.",
                  "enum": [
                    "also-correct",
                    "ruled-out",
                  ],
                  "type": "string",
                },
              },
              "required": [
                "filler",
                "verdict",
                "reason",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "constructionVariant": {
            "description": "The id of the sub-construction this draft ACTUALLY realizes, chosen from the list the user prompt gives. Report what you see, not what was requested. Descriptive only — like \`coverage\`, it never affects approval. Omit when the user prompt lists none, or when none of the listed ids fits.",
            "type": "string",
          },
          "contextSpoilsAnswer": {
            "description": "True if the draft's \`instructions\` or \`context\` field gives away the answer — names the required suffix/form, states the rule's outcome, or otherwise lets the learner write the answer without engaging with the blank. Naming the rule category (e.g. 'vowel harmony', 'plural agreement after a numeral') is acceptable; stating the outcome (e.g. 'front vowel (e) requires -ler suffix' for a blank that takes -ler) is not. Auto-approval requires this to be false. Exception: when the user prompt carries a scoring note declaring a digit-form or definition-based elicitation as intended for this cell, that declared cue is NOT spoilage.",
            "type": "boolean",
          },
          "coverage": {
            "description": "Realized coverage values for this draft, on the axes the user prompt asks about. Fill ONLY the sub-fields requested for this exercise; omit the rest. These are descriptive tags for pool-diversity monitoring — they never affect approval.",
            "properties": {
              "case": {
                "description": "Grammatical case realized by the target form (nominative/accusative/dative/locative/ablative/genitive).",
                "enum": [
                  "nominative",
                  "accusative",
                  "dative",
                  "locative",
                  "ablative",
                  "genitive",
                ],
                "type": "string",
              },
              "comparison": {
                "description": "Comparison construction realized by the target: comparative (superiority), superlative, equative (equality), or less (inferiority).",
                "enum": [
                  "comparative",
                  "superlative",
                  "equative",
                  "less",
                ],
                "type": "string",
              },
              "number": {
                "description": "Grammatical number realized by the target form (singular/plural).",
                "enum": [
                  "singular",
                  "plural",
                ],
                "type": "string",
              },
              "person": {
                "description": "Grammatical person/number realized by the target answer (the form the learner must produce).",
                "enum": [
                  "1sg",
                  "2sg",
                  "3sg",
                  "1pl",
                  "2pl",
                  "3pl",
                ],
                "type": "string",
              },
              "polarity": {
                "description": "Whether the target sentence is affirmative or negative.",
                "enum": [
                  "affirmative",
                  "negative",
                ],
                "type": "string",
              },
              "sentenceType": {
                "description": "Clause type of the target sentence: declarative, interrogative, or imperative.",
                "enum": [
                  "declarative",
                  "interrogative",
                  "imperative",
                ],
                "type": "string",
              },
              "wordClass": {
                "description": "Part of speech of the target word (vocab_recall \`expectedWord\`).",
                "enum": [
                  "noun",
                  "verb",
                  "adjective",
                  "adverb",
                  "other",
                ],
                "type": "string",
              },
            },
            "type": "object",
          },
          "culturalIssues": {
            "description": "Free-text descriptions of cultural concerns: stereotyping, sensitive content, exclusion. A single non-empty entry routes the draft to "rejected" regardless of qualityScore — this is intentional. Use sparingly.",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "flaggedReasons": {
            "description": "Free-text reasons that go into exercises.flagged_reasons when the draft routes to "flagged". Add anything that future-you would want to see when reviewing manually.",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "grammarPointMatch": {
            "description": "True if the exercise actually tests the target grammar point. False if the targeting is incidental or absent.",
            "type": "boolean",
          },
          "levelMatch": {
            "description": "True if the exercise sits at the requested CEFR level. False if vocabulary or grammar drifts above or below the target level.",
            "type": "boolean",
          },
          "qualityScore": {
            "description": "Overall quality from 0.0 to 1.0. Below 0.5 will reject the draft; 0.5–0.7 will flag it for human review; >= 0.7 (with no other failures) auto-approves.",
            "type": "number",
          },
        },
        "required": [
          "candidateFillers",
          "qualityScore",
          "ambiguous",
          "contextSpoilsAnswer",
          "levelMatch",
          "grammarPointMatch",
          "culturalIssues",
          "flaggedReasons",
        ],
        "type": "object",
      },
      "name": "submit_validation_result",
      "strict": null,
    },
  ],
}
`;

exports[`validateDraft > request shape for the default model is unchanged (model-request shaping guard) 1`] = `
{
  "max_tokens": 2048,
  "model": "claude-sonnet-5-5",
  "output_config": null,
  "system": [
    {
      "cache_control": {
        "type": "ephemeral",
      },
      "type": "text",
    },
    {
      "cache_control": null,
      "type": "text",
    },
  ],
  "temperature": null,
  "thinking": {
    "type": "between_tools",
  },
  "tool_choice": {
    "type": "auto",
  },
  "tools": [
    {
      "input_schema": {
        "additionalProperties": false,
        "properties": {
          "ambiguous": {
            "description": "True if more than one substantively different answer would be equally correct. For cloze: true when more than one plausibly-fitting lexeme/form satisfies the targeted grammar point in this sentence AND the draft's \`acceptableAnswers\` list does not enumerate them (e.g. 'Sınıfta sekiz ___ var' — chair/student/book all fit — with no \`acceptableAnswers\`). For translation: surface variation is fine, but two structurally different correct translations is ambiguous. For vocab_recall: the prompt must single out exactly one headword.",
            "type": "boolean",
          },
          "candidateFillers": {
            "description": "Fill this FIRST, before any other field. List 2-4 distinct fillers a competent speaker might write in the blank — including \`correctAnswer\` itself — and adjudicate each against the VISIBLE sentence alone, never against \`correctAnswer\`. This is your working-out for \`ambiguous\`, not a verdict.",
            "items": {
              "additionalProperties": false,
              "properties": {
                "filler": {
                  "description": "The candidate fill.",
                  "type": "string",
                },
                "reason": {
                  "description": "For \`ruled-out\`, quote the span of the visible sentence that forbids it. For \`also-correct\`, one clause on why it fits.",
                  "type": "string",
                },
                "verdict": {
                  "description": "\`also-correct\`: fully correct on the visible sentence AND satisfies the grammar point. \`ruled-out\`: something in the visible sentence forbids it.",
                  "enum": [
                    "also-correct",
                    "ruled-out",
                  ],
                  "type": "string",
                },
              },
              "required": [
                "filler",
                "verdict",
                "reason",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "constructionVariant": {
            "description": "The id of the sub-construction this draft ACTUALLY realizes, chosen from the list the user prompt gives. Report what you see, not what was requested. Descriptive only — like \`coverage\`, it never affects approval. Omit when the user prompt lists none, or when none of the listed ids fits.",
            "type": "string",
          },
          "contextSpoilsAnswer": {
            "description": "True if the draft's \`instructions\` or \`context\` field gives away the answer — names the required suffix/form, states the rule's outcome, or otherwise lets the learner write the answer without engaging with the blank. Naming the rule category (e.g. 'vowel harmony', 'plural agreement after a numeral') is acceptable; stating the outcome (e.g. 'front vowel (e) requires -ler suffix' for a blank that takes -ler) is not. Auto-approval requires this to be false. Exception: when the user prompt carries a scoring note declaring a digit-form or definition-based elicitation as intended for this cell, that declared cue is NOT spoilage.",
            "type": "boolean",
          },
          "coverage": {
            "additionalProperties": false,
            "description": "Realized coverage values for this draft, on the axes the user prompt asks about. Fill ONLY the sub-fields requested for this exercise; omit the rest. These are descriptive tags for pool-diversity monitoring — they never affect approval.",
            "properties": {
              "case": {
                "description": "Grammatical case realized by the target form (nominative/accusative/dative/locative/ablative/genitive).",
                "enum": [
                  "nominative",
                  "accusative",
                  "dative",
                  "locative",
                  "ablative",
                  "genitive",
                ],
                "type": "string",
              },
              "comparison": {
                "description": "Comparison construction realized by the target: comparative (superiority), superlative, equative (equality), or less (inferiority).",
                "enum": [
                  "comparative",
                  "superlative",
                  "equative",
                  "less",
                ],
                "type": "string",
              },
              "number": {
                "description": "Grammatical number realized by the target form (singular/plural).",
                "enum": [
                  "singular",
                  "plural",
                ],
                "type": "string",
              },
              "person": {
                "description": "Grammatical person/number realized by the target answer (the form the learner must produce).",
                "enum": [
                  "1sg",
                  "2sg",
                  "3sg",
                  "1pl",
                  "2pl",
                  "3pl",
                ],
                "type": "string",
              },
              "polarity": {
                "description": "Whether the target sentence is affirmative or negative.",
                "enum": [
                  "affirmative",
                  "negative",
                ],
                "type": "string",
              },
              "sentenceType": {
                "description": "Clause type of the target sentence: declarative, interrogative, or imperative.",
                "enum": [
                  "declarative",
                  "interrogative",
                  "imperative",
                ],
                "type": "string",
              },
              "wordClass": {
                "description": "Part of speech of the target word (vocab_recall \`expectedWord\`).",
                "enum": [
                  "noun",
                  "verb",
                  "adjective",
                  "adverb",
                  "other",
                ],
                "type": "string",
              },
            },
            "type": "object",
          },
          "culturalIssues": {
            "description": "Free-text descriptions of cultural concerns: stereotyping, sensitive content, exclusion. A single non-empty entry routes the draft to "rejected" regardless of qualityScore — this is intentional. Use sparingly.",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "flaggedReasons": {
            "description": "Free-text reasons that go into exercises.flagged_reasons when the draft routes to "flagged". Add anything that future-you would want to see when reviewing manually.",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "grammarPointMatch": {
            "description": "True if the exercise actually tests the target grammar point. False if the targeting is incidental or absent.",
            "type": "boolean",
          },
          "levelMatch": {
            "description": "True if the exercise sits at the requested CEFR level. False if vocabulary or grammar drifts above or below the target level.",
            "type": "boolean",
          },
          "qualityScore": {
            "description": "Overall quality from 0.0 to 1.0. Below 0.5 will reject the draft; 0.5–0.7 will flag it for human review; >= 0.7 (with no other failures) auto-approves.",
            "type": "number",
          },
        },
        "required": [
          "candidateFillers",
          "qualityScore",
          "ambiguous",
          "contextSpoilsAnswer",
          "levelMatch",
          "grammarPointMatch",
          "culturalIssues",
          "flaggedReasons",
        ],
        "type": "object",
      },
      "name": "submit_validation_result",
      "strict": true,
    },
  ],
}
`;
